Adições e correções - master e slaves funcionando em cluster e com o HAProxy

--- a/master/haproxy/etc/haproxy/haproxy.cfg
+++ b/master/haproxy/etc/haproxy/haproxy.cfg
@@ -22,7 +22,7 @@ listen  sislegis 0.0.0.0:80
 	option forceclose
 	option persist
 	stats enable
-	stats auth admin:proinfo
+	stats auth sislegis:@dmin123
 	stats uri /haproxy_stats
 	stats realm HAProxy\ Statistics
 	cookie SERVERID insert indirect nocache
